force-app/main/default/objects/Campaign/fields/Event_Categories__c.field-meta.xml
<CustomField>
    <fullName>Event_Categories__c</fullName>
    <description>The Event Categories (Tabs) for the Events Page in the Experience site.</description>
    <inlineHelpText>The Event Categories (Tabs) for the Events Page on my.goodthings</inlineHelpText>
    <label>Event Categories</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>About the Network</fullName>
            </value>
            <value>
                <fullName>Teach digital skills</fullName>
            </value>
            <value>
                <fullName>Community of Practice</fullName>
            </value>
            <value>
                <fullName>Consultations</fullName>
            </value>
            <value>
                <fullName>Our programs</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>