force-app/main/default/objects/Campaign/fields/Event_Date__c.field-meta.xml
<CustomField>
    <fullName>Event_Date__c</fullName>
    <description>The Date of the Event. This is used on the Event Card &amp; Registration Page in Experience site.</description>
    <inlineHelpText>The Date of the Event for the Event Card &amp; Registration Page on my.goodthings</inlineHelpText>
    <label>Event Date</label>
    <length>100</length>
    <type>Text</type>
</CustomField>