force-app/main/default/objects/Campaign/fields/Event_Duration__c.field-meta.xml
<CustomField>
    <fullName>Event_Duration__c</fullName>
    <description>The Duration of the Event. This is used on the Event Card &amp; Registration Page in Experience site.</description>
    <inlineHelpText>The Duration of the Event for the Event Card &amp; Registration Page on on my.goodthings</inlineHelpText>
    <label>Event Duration</label>
    <length>10</length>
    <type>Text</type>
</CustomField>