force-app/main/default/objects/Campaign/fields/Event_Location__c.field-meta.xml
<CustomField>
    <fullName>Event_Location__c</fullName>
    <defaultValue>&quot;Online&quot;</defaultValue>
    <description>The Location of the Event. This is used on the Event Card &amp; Registration Page in Experience site.</description>
    <inlineHelpText>The Location of the Event for the Event Card &amp; Registration Page on on my.goodthings</inlineHelpText>
    <label>Event Location</label>
    <length>150</length>
    <type>Text</type>
</CustomField>