force-app/main/default/objects/Campaign/fields/Event_Time__c.field-meta.xml
<CustomField>
    <fullName>Event_Time__c</fullName>
    <description>The Start Time of the Event. This is used on the Event Card &amp; Registration Page in Experience site.</description>
    <inlineHelpText>The Start Time of the Event for the Event Card &amp; Registration Page on on my.goodthings</inlineHelpText>
    <label>Event Time</label>
    <length>10</length>
    <type>Text</type>
</CustomField>