force-app/main/default/objects/Campaign/fields/Event_Time_Zone__c.field-meta.xml
<CustomField>
    <fullName>Event_Time_Zone__c</fullName>
    <defaultValue>&quot;AEST (Sydney)&quot;</defaultValue>
    <label>Event Time Zone</label>
    <length>20</length>
    <type>Text</type>
</CustomField>