force-app/main/default/objects/Campaign/fields/Event_URL__c.field-meta.xml
<CustomField>
    <fullName>Event_URL__c</fullName>
    <description>Encrypted Events URL for use in Call to Actions or Emails</description>
    <inlineHelpText>Encrypted Events URL for use in Call to Actions or Emails</inlineHelpText>
    <label>Event URL</label>
    <type>Url</type>
</CustomField>