force-app/main/default/objects/Campaign/fields/Zoom_Status_Assigned__c.field-meta.xml
<CustomField>
    <fullName>Zoom_Status_Assigned__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Ticked by a Flow after the Campaign Member Statuses for a Zoom Meeting have been created</description>
    <label>Zoom Status Assigned</label>
    <type>Checkbox</type>
</CustomField>